// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-list Renders \`alarms-list\` with clear filter disabled props 1`] = `
<div
  class="alarms-list"
>
  <div
    class="layout wrap justify-space-between align-end alarms-list__toolbar gap-4 px-4 mb-4"
  >
    <div
      class="flex"
    >
      <c-advanced-search-stub
        combobox=""
        fields="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        saved-items="item 1,item 2"
      />
    </div>
    <!---->
    <!---->
    <div
      class="flex"
    >
      <div
        class="layout align-end"
      >
        <filter-selector-stub
          disabled="true"
          filters=""
          hidedetails="true"
          itemtext="title"
          itemvalue="_id"
          label="Select a filter"
          lockedfilters=""
        />
        <!---->
      </div>
    </div>
    <!---->
    <div
      class="flex"
    >
      <alarms-list-remediation-instructions-filters-stub
        filters=""
        lockedfilters=""
      />
    </div>
    <div
      class="flex"
    >
      <span
        class="primary white--text v-chip v-chip--label v-chip--no-color v-chip--removable theme--light v-size--default"
      >
        <span
          class="v-chip__content"
        >
        Last 1 year
          <button
            aria-label="Close"
            class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
            style="font-size: 18px;"
            type="button"
          >
            cancel
          </button>
        </span>
      </span>
      <c-action-btn-stub
        color="primary"
        icon="schedule"
        tooltip="Set a custom date range"
      />
    </div>
    <!---->
  </div>
  <alarms-list-table-stub
    alarms="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    cellscontentbehavior="wrap"
    class="mt-2"
    columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    columnssettings="[object Object]"
    densable="true"
    dense="0"
    draggableclass="alarms-list-table__draggable-column"
    expandable="true"
    hidechildren="true"
    mincolumnwidth="40"
    options="[object Object]"
    refreshalarmslist="[Function]"
    resizingcolumnthrottledelay="10"
    search="search"
    selectable="true"
    selectedtag=""
    totalitems="10"
    widget="[object Object]"
  />
</div>
`;

exports[`alarms-list Renders \`alarms-list\` with default props 1`] = `
<div
  class="alarms-list"
>
  <div
    class="layout wrap justify-space-between align-end alarms-list__toolbar gap-4 px-4 mb-4"
  >
    <div
      class="flex"
    >
      <c-advanced-search-stub
        combobox=""
        fields="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        saved-items=""
      />
    </div>
    <!---->
    <!---->
    <div
      class="flex"
    >
      <!---->
    </div>
    <!---->
    <div
      class="flex"
    >
      <alarms-list-remediation-instructions-filters-stub
        filters=""
        lockedfilters=""
      />
    </div>
    <div
      class="flex"
    >
      <span
        class="primary white--text v-chip v-chip--label v-chip--no-color v-chip--removable theme--light v-size--default"
      >
        <span
          class="v-chip__content"
        >
        Last 1 year
          <button
            aria-label="Close"
            class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
            style="font-size: 18px;"
            type="button"
          >
            cancel
          </button>
        </span>
      </span>
      <c-action-btn-stub
        color="primary"
        icon="schedule"
        tooltip="Set a custom date range"
      />
    </div>
    <!---->
  </div>
  <alarms-list-table-stub
    alarms="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    cellscontentbehavior="wrap"
    class="mt-2"
    columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    columnssettings="[object Object]"
    densable="true"
    dense="0"
    draggableclass="alarms-list-table__draggable-column"
    expandable="true"
    hidechildren="true"
    mincolumnwidth="40"
    options="[object Object]"
    refreshalarmslist="[Function]"
    resizingcolumnthrottledelay="10"
    search="search"
    selectable="true"
    selectedtag=""
    totalitems="10"
    widget="[object Object]"
  />
</div>
`;

exports[`alarms-list Renders \`alarms-list\` with default props and user filter permission and correlation and bookmark 1`] = `
<div
  class="alarms-list"
>
  <div
    class="layout wrap justify-space-between align-end alarms-list__toolbar gap-4 px-4 mb-4"
  >
    <div
      class="flex"
    >
      <c-advanced-search-stub
        combobox=""
        fields="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        saved-items=""
      />
    </div>
    <!---->
    <div
      class="flex"
    >
      <v-switch-stub
        backgroundcolor=""
        class="mt-0"
        color="primary"
        errorcount="1"
        errormessages=""
        hidedetails="true"
        label="Correlation"
        messages=""
        ripple="true"
        rules=""
        successmessages=""
        valuecomparator="[Function]"
      />
    </div>
    <div
      class="flex"
    >
      <div
        class="layout align-end"
      >
        <filter-selector-stub
          clearable="true"
          disabled="true"
          filters=""
          hidedetails="true"
          itemtext="title"
          itemvalue="_id"
          label="Select a filter"
          lockedfilters=""
        />
        <!---->
      </div>
    </div>
    <div
      class="flex"
    >
      <v-switch-stub
        backgroundcolor=""
        class="mt-0"
        color="primary"
        errorcount="1"
        errormessages=""
        hidedetails="true"
        label="Filter by bookmark"
        messages=""
        ripple="true"
        rules=""
        successmessages=""
        valuecomparator="[Function]"
      />
    </div>
    <div
      class="flex"
    >
      <alarms-list-remediation-instructions-filters-stub
        filters=""
        lockedfilters=""
      />
    </div>
    <div
      class="flex"
    >
      <span
        class="primary white--text v-chip v-chip--label v-chip--no-color v-chip--removable theme--light v-size--default"
      >
        <span
          class="v-chip__content"
        >
        Last 1 year
          <button
            aria-label="Close"
            class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
            style="font-size: 18px;"
            type="button"
          >
            cancel
          </button>
        </span>
      </span>
      <c-action-btn-stub
        color="primary"
        icon="schedule"
        tooltip="Set a custom date range"
      />
    </div>
    <!---->
  </div>
  <alarms-list-table-stub
    alarms="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    cellscontentbehavior="wrap"
    class="mt-2"
    columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    columnssettings="[object Object]"
    densable="true"
    dense="0"
    draggableclass="alarms-list-table__draggable-column"
    expandable="true"
    hidechildren="true"
    mincolumnwidth="40"
    options="[object Object]"
    refreshalarmslist="[Function]"
    resizingcolumnthrottledelay="10"
    search="search"
    selectable="true"
    selectedtag=""
    totalitems="10"
    widget="[object Object]"
  />
</div>
`;
